# tiny-renderer

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  README.md
include/: Lib.hpp  Matrix.hpp  Type.h  Typedef.h  Vector2.hpp  Vector3.hpp  geometry.h  lib.hpp  model.h  type.h
src/: main.cpp  model.cpp
test/: MatrixTest.cpp  VectorTest.cpp
